test/errors/type/collections/set/__bandnot1.yasl
echo mt.lookup(collections.set(), .__bandnot)(collections.set(), true)
